# kptn

./: .gitignore  AGENTS.md  README-0.1.md  README.md  cli.py  copilot-instructions.md  cypress.config.ts  docker-compose-ddb.yml  kapten-schema.json  kptn-schema.json  package-lock.json  package.json  pyproject.toml  read_config.py  test_kapten_run.py
.github/workflows/: ci.yml
.planning/: PROJECT.md  ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
caching/: Hasher.py  TaskStateCache.py  models.py  r_imports.py  submit.py
caching/client/: DbClientDDB.py  create_subtaskbin.py  create_task.py  create_taskdatabin.py  get_taskdata.py  get_tasks.py  set_subtask_time.py  update_task.py
codegen/: codegen.py
codegen/templates/: flows.py.jinja  macros.jinja
cypress/: tsconfig.json
cypress/e2e/: lineage_hover.cy.ts  lineage_omnibar_filter.cy.ts  lineage_preview_scroll.cy.ts  lineage_python_preview.cy.ts
deploy/: authproxy_endpoint.py
doc-site/: package-lock.json  package.json
dockerbuild/: dockerbuild.py
docs/: migration.md
example/basic/: basic.py  kapten.yaml  kptn.yaml  tasks.yaml
example/duckdb_example/: config.json  duckdb_example.py  kapten.yaml  kptn.yaml
example/example_migration/: kptn.yaml  pipeline.py
example/minimal/: kptn.yaml  pipeline.py
example/mock_pipeline/: kapten.yaml  kptn.yaml
example/step_example/: Dockerfile  README.md  basic.json.tpl  basic.py  basic2.json.tpl  basic2.py  build-docker.sh  kapten.yaml  kptn.yaml  pyproject.toml  run.py  run_basic_sfn.sh
example/step_example/infra/: DOCKER_BUILD.md  README.md  docker_image.tf  dynamodb.tf  ecr.tf  efs.tf  locals.tf  main.tf  outputs.tf  stack_info.tf  task_definition.tf  task_execution_role.tf  task_role.tf  terraform.tfvars  variables.tf
example/step_example/infra/stepfunctions/: .terraform.lock.hcl  README.md  locals.tf  networking.tf  terraform.tfstate  terraform.tfvars  variables.tf
example/step_example/src/: __init__.py  c.py  d.py  list_items.py  process_item.py
filewatcher/: filewatcher.py
kapten/: __init__.py  cli.py  read_config.py
kapten/aws/: creds.py  decider.py
kapten/deploy/: push.py  (+4 more)
kptn/: __init__.py  exceptions.py  read_config.py  runner.py
kptn-vscode/: .gitignore  CHANGELOG.md  README.md  backend.py  package-lock.json  package.json  tsconfig.json
kptn_server/: README.md  __init__.py  api_http.py  api_jsonrpc.py  service.py
tests/: __init__.py  base_db_client_test.py  fakes.py  fixture_constants.py  runtime_config_fixtures.py  test_bundle_decider.py  test_cache_hit_skip.py  test_change_detector_detector.py  test_change_detector_hasher.py  test_cli_validate.py  test_codegen_dual_outputs.py  test_codegen_extends.py  test_compute_requirements.py  test_config_validation.py  test_db_client_init.py  test_ddb_cache.py  test_decider.py  test_duckdb_client.py  test_duckdb_hashing.py  test_graph_config.py  test_graph_config_override.py  test_graph_decorators.py  test_graph_graph.py  test_graph_map.py  test_graph_nodes.py  test_graph_parallel_stage_noop.py  test_graph_pipeline.py  test_graph_requires.py  test_graph_sql_r_tasks.py  test_graph_topo.py  test_hasher.py  test_infra_scaffolder.py  test_lineage_visualizer.py  test_logger.py  test_pipeline_config_logging.py  test_profiles_loader.py  test_profiles_resolver.py  test_profiles_schema.py  test_py_task_static_args.py  test_repository_basics.py  (+24 more)
ui/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
watcher/: Dockerfile  app.py  local.py
(+251 files in other folders)
