[project]
name = "kptn_step"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3",
]

[project.scripts]
kptn = "kptn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["kptn"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
